@@ -19,6 +19,7 @@ import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static java.util.Optional.empty;
 import static java.util.Optional.of;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import com.redhat.rhn.FaultException;
@@ -623,7 +624,7 @@ public class SystemHandler extends BaseHandler {
 
         List<Channel> childChannels = channelIds.stream()
                 .map(cid -> ChannelFactory.lookupByIdAndUser(cid, loggedInUser))
-                .toList();
+                .collect(toList());
 
         // consistent check
         long bid = baseChannel.map(Channel::getId).orElse(-1L);
@@ -644,7 +645,7 @@ public class SystemHandler extends BaseHandler {
                     baseChannel,
                     childChannels,
                     earliestOccurrence, null);
-            return action.stream().map(Action::getId).toList();
+            return action.stream().map(Action::getId).collect(toList());
         }
         catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
             throw new TaskomaticApiException(e.getMessage());
@@ -1563,7 +1564,7 @@ public class SystemHandler extends BaseHandler {
             Optional.ofNullable(pi.getInstallTimeObj()).ifPresent(it -> item.put("installtime", it));
             item.put("retracted", pi.isRetracted());
             return item;
-        }).toList();
+        }).collect(toList());
     }
 
     /**
@@ -1609,7 +1610,7 @@ public class SystemHandler extends BaseHandler {
                 item.put("pending status", pi.getPending().equals("L") ? "Locking" : "Unlocking");
             }
             return item;
-        }).toList();
+        }).collect(toList());
     }
 
     /**
@@ -2887,7 +2888,9 @@ public class SystemHandler extends BaseHandler {
     @ApiIgnore(ApiType.HTTP)
     public int provisionSystem(User loggedInUser, Integer sid, String profileName)
             throws FaultException {
-       return provisionSystem(loggedInUser, RhnXmlRpcServer.getRequest(), sid, profileName, new Date());
+       return provisionSystem(
+               loggedInUser, RhnXmlRpcServer.getRequest(), sid, null, profileName, new Date(), new HashMap<>()
+       );
     }
 
     /**
@@ -2911,7 +2914,7 @@ public class SystemHandler extends BaseHandler {
     @ApiIgnore(ApiType.XMLRPC)
     public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid, String profileName)
             throws FaultException {
-        return provisionSystem(loggedInUser, request, sid, profileName, new Date());
+        return provisionSystem(loggedInUser, request, sid, null, profileName, new Date(), new HashMap<>());
     }
 
     /**
@@ -2936,7 +2939,9 @@ public class SystemHandler extends BaseHandler {
     @ApiIgnore(ApiType.HTTP)
     public int provisionSystem(User loggedInUser, Integer sid, Integer proxy, String profileName)
             throws FaultException {
-        return provisionSystem(loggedInUser, RhnXmlRpcServer.getRequest(), sid, proxy, profileName, new Date());
+        return provisionSystem(
+                loggedInUser, RhnXmlRpcServer.getRequest(), sid, proxy, profileName, new Date(), new HashMap<>()
+        );
     }
 
     /**
@@ -2963,7 +2968,7 @@ public class SystemHandler extends BaseHandler {
     public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid, Integer proxy,
                                String profileName)
             throws FaultException {
-        return provisionSystem(loggedInUser, request, sid, proxy, profileName, new Date());
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, new Date(), new HashMap<>());
     }
 
     /**
@@ -2989,7 +2994,9 @@ public class SystemHandler extends BaseHandler {
     public int provisionSystem(User loggedInUser, Integer sid,
             String profileName, Date earliestDate)
                     throws FaultException {
-        return provisionSystem(loggedInUser, RhnXmlRpcServer.getRequest(), sid, profileName, earliestDate);
+        return provisionSystem(
+                loggedInUser, RhnXmlRpcServer.getRequest(), sid, null, profileName, earliestDate, new HashMap<>()
+        );
     }
 
     /**
@@ -3016,7 +3023,7 @@ public class SystemHandler extends BaseHandler {
     public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid,
                                 String profileName, Date earliestDate)
             throws FaultException {
-        return provisionSystem(loggedInUser, request , sid, null, profileName, earliestDate);
+        return provisionSystem(loggedInUser, request , sid, null, profileName, earliestDate, new HashMap<>());
     }
 
     /**
@@ -3045,8 +3052,9 @@ public class SystemHandler extends BaseHandler {
                                Integer proxy, String profileName, Date earliestDate)
             throws FaultException {
         HttpServletRequest request = RhnXmlRpcServer.getRequest();
-        return provisionSystem(loggedInUser, request, sid, proxy, profileName, earliestDate);
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, earliestDate, new HashMap<>());
     }
+
     /**
      * Provision a system using the specified kickstart/autoinstallation profile at specified time.
      *
@@ -3071,7 +3079,77 @@ public class SystemHandler extends BaseHandler {
      */
     @ApiIgnore(ApiType.XMLRPC)
     public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid,
-            Integer proxy, String profileName, Date earliestDate)
+                               Integer proxy, String profileName, Date earliestDate)
+        throws FaultException {
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, earliestDate, new HashMap<>());
+    }
+
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile at specified time.
+     *
+     * @param loggedInUser The current user
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used.
+     * @param earliestDate when the autoinstallation needs to be scheduled
+     * @param advancedOptions custom kernel or post kernel options
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.param #param("$date", "earliestDate")
+     * @apidoc.param
+     *  #struct_begin("advancedOptions")
+     *      #prop_desc("string", "kernel_options", "custom kernel options")
+     *      #prop_desc("string", "post_kernel_options", "custom post kernel options")
+     *  #struct_end()
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.HTTP)
+    public int provisionSystem(User loggedInUser, Integer sid, Integer proxy, String profileName,
+                               Date earliestDate, Map<String, String> advancedOptions)
+            throws FaultException {
+        HttpServletRequest request = RhnXmlRpcServer.getRequest();
+        return provisionSystem(loggedInUser, request, sid, proxy, profileName, earliestDate, advancedOptions);
+    }
+
+    /**
+     * Provision a system using the specified kickstart/autoinstallation profile at specified time.
+     *
+     * @param loggedInUser The current user
+     * @param request the request
+     * @param sid of the system to be provisioned
+     * @param proxy ID of the proxy to use
+     * @param profileName of Profile to be used.
+     * @param earliestDate when the autoinstallation needs to be scheduled
+     * @param advancedOptions custom kernel or post kernel options
+     * @return Returns id of the action if successful, exception otherwise
+     * @throws FaultException A FaultException is thrown if the server corresponding to
+     * id cannot be found or profile is not found.
+     *
+     * @apidoc.doc Provision a system using the specified kickstart/autoinstallation profile.
+     * @apidoc.param #session_key()
+     * @apidoc.param #param_desc("int", "sid", "ID of the system to be provisioned.")
+     * @apidoc.param #param_desc("int", "proxy", "ID of the proxy to use.")
+     * @apidoc.param #param_desc("string", "profileName", "Profile to use.")
+     * @apidoc.param #param("$date", "earliestDate")
+     * @apidoc.param
+     *  #struct_begin("advancedOptions")
+     *      #prop_desc("string", "kernel_options", "custom kernel options")
+     *      #prop_desc("string", "post_kernel_options", "custom post kernel options")
+     *  #struct_end()
+     * @apidoc.returntype #param_desc("int", "id", "ID of the action scheduled, otherwise exception thrown
+     * on error")
+     */
+    @ApiIgnore(ApiType.XMLRPC)
+    public int provisionSystem(User loggedInUser, HttpServletRequest request, Integer sid,
+            Integer proxy, String profileName, Date earliestDate, Map<String, String> advancedOptions)
         throws FaultException {
         log.debug("provisionSystem called.");
 
@@ -3096,6 +3174,14 @@ public class SystemHandler extends BaseHandler {
         KickstartScheduleCommand cmd = new KickstartScheduleCommand(
                 Long.valueOf(sid),
                 ksdata.getId(), loggedInUser, earliestDate, host);
+        if (advancedOptions != null) {
+            if (advancedOptions.containsKey("kernel_options")) {
+                cmd.setKernelOptions(advancedOptions.get("kernel_options"));
+            }
+            if (advancedOptions.containsKey("post_kernel_options")) {
+                cmd.setPostKernelOptions(advancedOptions.get("post_kernel_options"));
+            }
+        }
         if (proxy != null) {
             Server proxyServer = SystemManager.lookupByIdAndOrg(Long.valueOf(proxy), loggedInUser.getOrg());
             if (proxyServer == null) {
@@ -3827,7 +3913,7 @@ public class SystemHandler extends BaseHandler {
         // we need long values to pass to ErrataManager.applyErrataHelper
         List<Long> serverIds = sids.stream()
             .map(Integer::longValue)
-            .toList();
+            .collect(toList());
 
         if (!allowModules) {
             for (Long sid : serverIds) {
@@ -3841,7 +3927,7 @@ public class SystemHandler extends BaseHandler {
         }
         List<Long> eids = errataIds.stream()
             .map(Integer::longValue)
-            .toList();
+            .collect(toList());
 
         try {
             return ErrataManager.applyErrataHelper(loggedInUser,
@@ -4164,16 +4250,16 @@ public class SystemHandler extends BaseHandler {
 
         if (ActionFactory.TYPE_PACKAGES_UPDATE.equals(acT)) {
             List<Tuple2<Long, Long>> pidsidpairs = ErrataFactory.retractedPackages(
-                    packages.stream().map(Package::getId).toList(),
-                    sids.stream().map(Integer::longValue).toList()
+                    packages.stream().map(Package::getId).collect(toList()),
+                    sids.stream().map(Integer::longValue).collect(toList())
             );
             if (!pidsidpairs.isEmpty()) {
-                throw new RetractedPackageFault(pidsidpairs.stream().map(Tuple2::getA).toList());
+                throw new RetractedPackageFault(pidsidpairs.stream().map(Tuple2::getA).collect(toList()));
             }
         }
 
         // Check if the package is part of a PTF. If true it cannot be manually installed/updated/ removed
-        List<Long> ptfPackages = packages.stream().filter(Package::isPartOfPtf).map(Package::getId).toList();
+        List<Long> ptfPackages = packages.stream().filter(Package::isPartOfPtf).map(Package::getId).collect(toList());
         if (!ptfPackages.isEmpty()) {
             throw new PtfPackageFault(ptfPackages);
         }
@@ -4183,7 +4269,7 @@ public class SystemHandler extends BaseHandler {
             List<Long> ptfMasterPackages = packages.stream()
                                                    .filter(Package::isMasterPtfPackage)
                                                    .map(Package::getId)
-                                                   .toList();
+                                                   .collect(toList());
             if (!ptfMasterPackages.isEmpty()) {
                 throw new PtfMasterFault(ptfMasterPackages);
             }
@@ -4403,12 +4489,12 @@ public class SystemHandler extends BaseHandler {
                                          List<Integer> packageIds, Date earliestOccurrence, Boolean allowModules) {
 
         List<Tuple2<Long, Long>> retracted = ErrataFactory.retractedPackages(
-                packageIds.stream().map(Integer::longValue).toList(),
-                sids.stream().map(Integer::longValue).toList());
+                packageIds.stream().map(Integer::longValue).collect(toList()),
+                sids.stream().map(Integer::longValue).collect(toList()));
 
         List<Long> retractedPids = retracted.stream()
                 .map(Tuple2::getA)
-                .toList();
+                .collect(toList());
         if (retracted.isEmpty()) {
             return schedulePackagesAction(loggedInUser, sids,
                     packageIdsToMaps(loggedInUser, packageIds), earliestOccurrence,
@@ -4913,13 +4999,13 @@ public class SystemHandler extends BaseHandler {
         Set<Package> pkgsAlreadyLocked = new HashSet<>();
         List<Package> pkgsFindAlreadyLocked = PackageManager.lookupByIdAndUser(
                 lockedPackagesResult.stream().map(PackageListItem::getPackageId)
-                        .toList(), loggedInUser);
+                        .collect(toList()), loggedInUser);
         pkgsAlreadyLocked.addAll(pkgsFindAlreadyLocked);
 
         Set<Package> pkgsToLock = new HashSet<>();
         List<Package> pkgsFindToLock = PackageManager.lookupByIdAndUser(pkgIdsToLock
 
-                .stream().map(Integer::longValue).toList(), loggedInUser);
+                .stream().map(Integer::longValue).collect(toList()), loggedInUser);
         pkgsFindToLock.stream().filter(Objects::nonNull).forEach(pkgsToLock::add);
 
         pkgsToLock.removeAll(pkgsAlreadyLocked);
@@ -4929,7 +5015,7 @@ public class SystemHandler extends BaseHandler {
 
         Set<Package> pkgsToUnlock = new HashSet<>();
         List<Package> pkgsFindToUnlock = PackageManager.lookupByIdAndUser(pkgIdsToUnlock
-                .stream().map(Integer::longValue).toList(), loggedInUser);
+                .stream().map(Integer::longValue).collect(toList()), loggedInUser);
         pkgsFindToUnlock.stream().filter(Objects::nonNull).forEach(pkgsToUnlock::add);
 
         pkgsToUnlock.forEach(x -> x.setLockPending(Boolean.TRUE));
@@ -8203,7 +8289,7 @@ public class SystemHandler extends BaseHandler {
                 .map(p -> new SUSEInstalledProduct(p.getName(), p.getVersion(),
                         p.getArch().getLabel(), p.getRelease(), p.isBaseproduct(),
                         p.getSUSEProduct().getFriendlyName()))
-                .toList();
+                .collect(toList());
     }
 
     /**
@@ -8578,10 +8664,10 @@ public class SystemHandler extends BaseHandler {
      * @apidoc.returntype #param("int", "actionId", "The action id of the scheduled action")
      */
     public Long scheduleApplyHighstate(User loggedInUser, List<Integer> sids, Date earliestOccurrence, Boolean test) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).collect(Collectors.toList());
+        List<Long> sysids = sids.stream().map(Integer::longValue).collect(toList());
         try {
-            Set<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
-                    .map(Server::getId).collect(toSet());
+            List<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
+                    .map(Server::getId).toList();
             if (!visible.containsAll(sysids)) {
                 sysids.removeAll(visible);
                 throw new UnsupportedOperationException("Some System not managed with Salt: " + sysids);
@@ -8645,7 +8731,7 @@ public class SystemHandler extends BaseHandler {
      */
     public Long scheduleApplyStates(User loggedInUser, List<Integer> sids, List<String> stateNames,
             Date earliestOccurrence, Boolean test) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).toList();
+        List<Long> sysids = sids.stream().map(Integer::longValue).collect(toList());
         try {
             List<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
                     .map(Server::getId).toList();
@@ -8973,7 +9059,7 @@ public class SystemHandler extends BaseHandler {
      */
 
     public List<Long> changeProxy(User loggedInUser, List<Integer> sids, Integer proxyId) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).toList();
+        List<Long> sysids = sids.stream().map(Integer::longValue).collect(toList());
         try {
             return ActionManager.changeProxy(loggedInUser, sysids, proxyId.longValue());
         }
