@@ -130,7 +130,7 @@ public class CVEAuditManager {
                         parameters.put("rank", chan.getRank());
                         return parameters;
                     });
-                }).toList();
+                }).collect(Collectors.toList());
 
         m.executeUpdates(parameterList);
     }
@@ -155,7 +155,7 @@ public class CVEAuditManager {
                         parameters.put("rank", chan.getRank());
                         return parameters;
                     });
-        }).toList();
+        }).collect(Collectors.toList());
 
         m.executeUpdates(parameterList);
     }
@@ -429,7 +429,7 @@ public class CVEAuditManager {
                     ).entrySet()
                     .stream()
                     // its safe to call get here since groupingBy will not produce empty lists
-                    .map(s -> s.getValue().get()).toList();
+                    .map(s -> s.getValue().get()).collect(Collectors.toList());
         });
     }
 
@@ -519,7 +519,7 @@ public class CVEAuditManager {
 
                     // ...if it has a target with that base product...
                     List<SUSEProductDto> targets = findAllTargetProducts(suseProductID);
-                    if (log.isDebugEnabled() && targets.size() <= 0) {
+                    if (log.isDebugEnabled() && targets.isEmpty()) {
                         log.debug("No target products found for {}", suseProductID);
                     }
                     for (SUSEProductDto target : targets) {
@@ -552,7 +552,7 @@ public class CVEAuditManager {
 
                     // ...if it has a source with that base product...
                     List<SUSEProductDto> sources = findAllSourceProducts(suseProductID);
-                    if (log.isDebugEnabled() && sources.size() <= 0) {
+                    if (log.isDebugEnabled() && sources.isEmpty()) {
                         log.debug("No source products found for {}", suseProductID);
                     }
                     for (SUSEProductDto source : sources) {
@@ -908,7 +908,7 @@ public class CVEAuditManager {
                         system.getPatchStatus(),
                         system.getChannels(),
                         system.getErratas()
-                )).toList();
+                )).collect(Collectors.toList());
     }
 
     /**
