@@ -42,7 +42,6 @@ import com.redhat.rhn.domain.rhnpackage.PackageEvr;
 import com.redhat.rhn.domain.rhnset.RhnSet;
 import com.redhat.rhn.domain.role.RoleFactory;
 import com.redhat.rhn.domain.server.MgrServerInfo;
-import com.redhat.rhn.domain.server.MinionServer;
 import com.redhat.rhn.domain.server.Server;
 import com.redhat.rhn.domain.server.ServerFactory;
 import com.redhat.rhn.domain.server.ServerGroupFactory;
@@ -60,6 +59,7 @@ import com.redhat.rhn.manager.rhnset.RhnSetManager;
 import com.redhat.rhn.manager.system.SystemManager;
 import com.redhat.rhn.taskomatic.TaskomaticApiException;
 
+import com.suse.manager.hub.HubManager;
 import com.suse.manager.reactor.utils.LocalDateTimeISOAdapter;
 import com.suse.manager.reactor.utils.OptionalTypeAdapterFactory;
 import com.suse.manager.utils.PagedSqlQueryBuilder;
@@ -83,6 +83,8 @@ import org.apache.struts.action.ActionErrors;
 import org.apache.struts.action.ActionMessage;
 import org.apache.struts.action.ActionMessages;
 
+import java.io.IOException;
+import java.security.cert.CertificateException;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
@@ -191,7 +193,7 @@ public class SystemsController {
             return json(response, virtual.stream()
                     .filter(SystemOverview::isSelectable)
                     .map(VirtualSystemOverview::getUuid)
-                    .toList()
+                    .collect(Collectors.toList())
             );
         }
 
@@ -280,7 +282,7 @@ public class SystemsController {
             return json(response, systems.stream()
                     .filter(SystemOverview::isSelectable)
                     .map(SystemOverview::getId)
-                    .toList(), new TypeToken<>() { });
+                    .collect(Collectors.toList()), new TypeToken<>() { });
         }
 
         DataResult<SystemOverview> systems = SystemManager.systemListNew(user, parser, pc);
@@ -388,14 +390,14 @@ public class SystemsController {
              return badRequest(response, "unknown_system");
          }
          if (server.isMgrServer()) {
-             Optional<MinionServer> minion = server.asMinionServer();
-             if (minion.isEmpty()) {
-                 if (LOG.isDebugEnabled()) {
-                     LOG.error("System ({}) not a minion", StringUtil.sanitizeLogInput(sidStr));
-                 }
-                 return badRequest(response, "system_not_mgr_server");
+             try {
+                 HubManager hubManager = new HubManager();
+                 hubManager.setReportDbUser(user, server, true);
              }
-             SystemManager.setReportDbUser(minion.get(), true);
+             catch (CertificateException | IOException e) {
+                 LOG.error(e.getMessage(), e);
+                 return badRequest(response, "set_reportdb_creds_failed");
+             }
          }
          else {
              if (LOG.isErrorEnabled()) {
@@ -509,7 +511,7 @@ public class SystemsController {
                             c.isCloned(),
                             c.getArchLabel()
                             ))
-                    .toList();
+                    .collect(Collectors.toList());
 
             return result(response, ResultJson.success(baseChannels), new TypeToken<>() { });
         });
@@ -679,7 +681,7 @@ public class SystemsController {
                                 c.getChannelArch().getLabel(),
                                 channelRecommendedFlags.get(c.getId()),
                                 preservationsByNewChild.get(c) != null ? preservationsByNewChild.get(c).getId() : null))
-                        .toList();
+                        .collect(Collectors.toList());
                 return result(response, ResultJson.success(jsonList), new TypeToken<>() { });
             }
             catch (LookupException e) {
