@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016 SUSE LLC
+ * Copyright (c) 2016--2024 SUSE LLC
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -7,10 +7,6 @@
  * FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
  * along with this software; if not, see
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt.
- *
- * Red Hat trademarks are not licensed under GPLv2. No permission is
- * granted to use or replicate Red Hat trademarks that are incorporated
- * in this software or its documentation.
  */
 package com.suse.manager.webui.services;
 
@@ -115,12 +111,13 @@ import com.suse.manager.utils.SaltUtils;
 import com.suse.manager.webui.services.iface.SaltApi;
 import com.suse.manager.webui.services.impl.SaltSSHService;
 import com.suse.manager.webui.services.pillar.MinionPillarManager;
-import com.suse.manager.webui.utils.DownloadTokenBuilder;
 import com.suse.manager.webui.utils.SaltModuleRun;
 import com.suse.manager.webui.utils.SaltState;
 import com.suse.manager.webui.utils.SaltSystemReboot;
 import com.suse.manager.webui.utils.salt.custom.MgrActionChains;
 import com.suse.manager.webui.utils.salt.custom.ScheduleMetadata;
+import com.suse.manager.webui.utils.token.DownloadTokenBuilder;
+import com.suse.manager.webui.utils.token.TokenBuildingException;
 import com.suse.salt.netapi.calls.LocalAsyncResult;
 import com.suse.salt.netapi.calls.LocalCall;
 import com.suse.salt.netapi.calls.modules.State;
@@ -153,7 +150,6 @@ import org.cobbler.CobblerConnection;
 import org.cobbler.Distro;
 import org.cobbler.Profile;
 import org.cobbler.SystemRecord;
-import org.jose4j.lang.JoseException;
 
 import java.io.File;
 import java.io.IOException;
@@ -403,7 +399,7 @@ public class SaltServerActionService {
         }
 
         List<MinionServer> sshPushMinions = MinionServerFactory.findMinionsByServerIds(
-                sshMinionSummaries.stream().map(MinionSummary::getServerId).toList());
+                sshMinionSummaries.stream().map(MinionSummary::getServerId).collect(Collectors.toList()));
 
         if (!sshPushMinions.isEmpty()) {
             for (MinionServer sshMinion : sshPushMinions) {
@@ -520,7 +516,7 @@ public class SaltServerActionService {
             // first check if there's an action chain with a reboot already executing
             Map<String, Result<Map<String, String>>> pendingResumeConf = saltApi.getPendingResume(
                     sshMinions.stream().map(MinionSummary::getMinionId)
-                            .toList()
+                            .collect(Collectors.toList())
             );
             List<MinionSummary> targetSSHMinions = sshMinions.stream()
                     .filter(sshMinion -> {
@@ -557,7 +553,7 @@ public class SaltServerActionService {
 
             Map<String, Result<Map<String, ApplyResult>>> res = saltSSHService.callSyncSSH(call,
                     new MinionList(targetSSHMinions.stream().map(MinionSummary::getMinionId)
-                            .toList()),
+                            .collect(Collectors.toList())),
                     extraFilerefs);
 
             res.forEach((minionId, chunkResult) -> {
@@ -838,7 +834,7 @@ public class SaltServerActionService {
                         ServerAction sa = saCalls.getKey();
                         List<LocalCall<?>> calls = saCalls.getValue();
                         return convertToState(actionChain.getId(), sa, calls, minion).stream();
-                    }).toList();
+                    }).collect(Collectors.toList());
 
             statesPerMinion.put(minion, states);
         });
@@ -1073,7 +1069,7 @@ public class SaltServerActionService {
                                                 e.getValue().getB().endsWith("-X") ?
                                                     e.getValue().getB().substring(0, e.getValue().getB().length() - 2) :
                                                     e.getValue().getB()))
-                                        .toList()))
+                                        .collect(Collectors.toList())))
                 ),
                 Map.Entry::getValue
         ));
@@ -1139,7 +1135,7 @@ public class SaltServerActionService {
                 }
         });
         List<List<String>> duplicatedPkgs = pkgsAll.stream()
-                .filter(p -> !uniquePkgs.contains(p)).toList();
+                .filter(p -> !uniquePkgs.contains(p)).collect(Collectors.toList());
 
         Map<String, Object> params = new HashMap<>();
         params.put(PARAM_PKGS, uniquePkgs);
@@ -1392,18 +1388,19 @@ public class SaltServerActionService {
     }
 
     private String getChannelUrl(MinionServer minion, String channelLabel) {
-        DownloadTokenBuilder tokenBuilder = new DownloadTokenBuilder(minion.getOrg().getId());
-        tokenBuilder.useServerSecret();
-        tokenBuilder.setExpirationTimeMinutesInTheFuture(
-            Config.get().getInt(ConfigDefaults.TEMP_TOKEN_LIFETIME)
-        );
-        tokenBuilder.onlyChannels(Collections.singleton(channelLabel));
-        String token = "";
+        String token;
+
         try {
-            token = tokenBuilder.getToken();
+            token = new DownloadTokenBuilder(minion.getOrg().getId())
+                .usingServerSecret()
+                .expiringAfterMinutes(Config.get().getInt(ConfigDefaults.TEMP_TOKEN_LIFETIME))
+                .allowingOnlyChannels(Set.of(channelLabel))
+                .build()
+                .getSerializedForm();
         }
-        catch (JoseException e) {
+        catch (TokenBuildingException e) {
             LOG.error("Could not generate token for {}", channelLabel, e);
+            token = "";
         }
 
         String host = minion.getChannelHost();
@@ -1418,7 +1415,7 @@ public class SaltServerActionService {
         imageStores.add(profile.getTargetStore());
 
         List<MinionServer> minions = MinionServerFactory.findMinionsByServerIds(
-                minionSummaries.stream().map(MinionSummary::getServerId).toList());
+                minionSummaries.stream().map(MinionSummary::getServerId).collect(Collectors.toList()));
 
         //TODO: optimal scheduling would be to group by host and orgid
         return minions.stream().collect(
@@ -1533,7 +1530,7 @@ public class SaltServerActionService {
         distupgrade.put("channels", subbed.stream()
                 .sorted()
                 .map(c -> "susemanager:" + c.getLabel())
-                .toList());
+                .collect(Collectors.toList()));
         if (Objects.nonNull(action.getDetails().getMissingSuccessors())) {
             pillar.put("missing_successors", Arrays.asList(action.getDetails().getMissingSuccessors().split(",")));
         }
@@ -1762,8 +1759,8 @@ public class SaltServerActionService {
             .map(d -> d.getStream() == null ?
                 singletonList(d.getModuleName()) :
                 Arrays.asList(d.getModuleName(), d.getStream()))
-            .collect(toList());
-        var disableParams = details.get(false).stream().map(AppStreamActionDetails::getModuleName).collect(toList());
+            .toList();
+        var disableParams = details.get(false).stream().map(AppStreamActionDetails::getModuleName).toList();
 
         Optional<Map<String, Object>> params = Optional.of(Map.of(
             PARAM_APPSTREAMS_ENABLE, enableParams,
@@ -1822,7 +1819,7 @@ public class SaltServerActionService {
     private Map<Boolean, List<MinionSummary>> execute(Action actionIn, LocalCall<?> call,
             List<MinionSummary> minionSummaries, boolean forcePackageListRefresh,
             boolean isStagingJob) {
-        List<String> minionIds = minionSummaries.stream().map(MinionSummary::getMinionId).toList();
+        List<String> minionIds = minionSummaries.stream().map(MinionSummary::getMinionId).collect(Collectors.toList());
 
         if (LOG.isDebugEnabled()) {
             LOG.debug("Executing action for: {}", minionIds.stream().collect(Collectors.joining(", ")));
@@ -1857,7 +1854,7 @@ public class SaltServerActionService {
             ActionChain actionChain,
             Set<MinionSummary> minionSummaries) {
         List<String> minionIds = minionSummaries.stream().map(MinionSummary::getMinionId)
-                .toList();
+                .collect(Collectors.toList());
 
         if (LOG.isDebugEnabled()) {
             LOG.debug("Executing action chain for: {}", String.join(", ", minionIds));
@@ -2091,14 +2088,13 @@ public class SaltServerActionService {
 
             while (!actionIdsDependencies.isEmpty()) {
                 Long acId = actionIdsDependencies.pop();
-                List<ServerAction> serverActionsWithPrereq = serverActions.stream()
+                serverActions.stream()
                         .filter(s -> s.getParentAction().getPrerequisite() != null)
                         .filter(s -> s.getParentAction().getPrerequisite().getId().equals(acId))
-                        .toList();
-                for (ServerAction sa : serverActionsWithPrereq) {
-                    actionIdsDependencies.push(sa.getParentAction().getId());
-                    sa.fail("Prerequisite failed");
-                }
+                        .forEach(sa -> {
+                            actionIdsDependencies.push(sa.getParentAction().getId());
+                            sa.fail("Prerequisite failed");
+                        });
             }
         }
     }
